Revision history for Perl extension SDL_perl.

* 2.520
	- Moved SDLx::Validate to XS
	- Moved SDLx::Surface (blit, draw_rect) to XS
	- Created SDLx::Text [garu]
	- Added exit_on_quit feature for SDLx::App

* 2.519
	- Removed build option -fPIC for windows [FROGGS]
	- Throw a warning for missing thread support instead of compile these funtions [FROGGS]
	- SDLx::Surface has alias for w,h [kthakore]
	- SDLx::Surface can use array color format for pixels
	- SDLx::Text added [garu]
	- SDLx::App->new() has exit on quit option 

* 2.518
	- Major refactor of SDLx::Controller [Blaizer]
	- Refactor SDLx::Surface code [Blaizer]

* 2.517
	- Gave SDL::Mixer::Init same signature for varying versions of SDL_Mixer [kthakore]
	- Fix for 2 tests: interface, layermanager

* 2.516
	- Fix for test plan in t/sdlx_sound [FROGGS]

* 2.515
	- Added preliminary SDLx::Sound [rflipo] 
	- Added preliminary SDLx::TTF [kthakore]

* 2.514
	- Made SDLx::Controller::Interface [kthakore]
	- Fixed unsigned int bug for get_pixels from surface [kthakore]
	- Several document fixes 
	- Minor additions to SDLx::Sprite::Animated [jtpalmer]
	- Using only bmp for that sprite test [jtpalmer]
	- Added a fix for writing key_sym for a SDL::Event [kthakore]

* 2.512
	- More tests and implemented more of SDLx::Sprite::Animated [jtpalmer]
	- Changed from SDL::Rect -> SDLx::Rect in SDLx::Sprite [hmehta]
	- Added drawing for circles in SDLx::Surface [kthakore]
	- Fixed test issues [FROGGS]
	- Added Layer and Layer Managers [FROGGS]
	- Added SDLx::Sound [rflipo]

* 2.511 06 August 2010
	- Added fixes for image and gfx uses in Surface [kthakore, garu]
	- Added raw, binary mode image detection to SDLx::Surafce [garu]
	- Minor doc fixes
	- Major segfaults in SDL::GFX::Primitives fixed [kthakore]
	- Issues with double free fixed for -DDEBUGGING tests [kthakore]
	- More delay add to test for syncing issues in VM test [FROGGS]
	- Used SDLx::Validate more [kthakore]