@@ -9,6 +9,16 @@ use SDLx::Sprite;
 use lib 't/lib';
 use SDL::TestTool;
 
+my $videodriver = $ENV{SDL_VIDEODRIVER};
+$ENV{SDL_VIDEODRIVER} = 'dummy' unless $ENV{SDL_RELEASE_TESTING};
+
+if ( !SDL::TestTool->init(SDL_INIT_VIDEO) ) {
+	plan( skip_all => 'Failed to init video' );
+} elsif ( !SDL::Config->has('SDL_image') ) {
+	plan( skip_all => 'SDL_image support not compiled' );
+}
+
+
 can_ok(
 	'SDLx::Sprite', qw( new rect clip load surface x y
 		w h draw alpha_key)
@@ -19,14 +29,6 @@ TODO: {
 	can_ok( 'SDLx::Sprite', qw( add remove zoom ) );
 }
 
-my $videodriver = $ENV{SDL_VIDEODRIVER};
-$ENV{SDL_VIDEODRIVER} = 'dummy' unless $ENV{SDL_RELEASE_TESTING};
-
-if ( !SDL::TestTool->init(SDL_INIT_VIDEO) ) {
-	plan( skip_all => 'Failed to init video' );
-} elsif ( !SDL::Config->has('SDL_image') ) {
-	plan( skip_all => 'SDL_image support not compiled' );
-}
 
 my $disp = SDL::Video::set_video_mode( 300, 300, 32, SDL_ANYFORMAT );
 
